fixing overflow

--- a/src/components/sections/hero/hero.module.css
+++ b/src/components/sections/hero/hero.module.css
@@ -1,3 +1,4 @@
 .hero {
   min-height: calc(100vh - 10vh);
+  overflow: hidden;
 }
